--- a/journal/202002.md
+++ b/journal/202002.md
@@ -12,41 +12,129 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 ## Development
 
-{ hint: add below overview of activity for each project. add any other project that warrants a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans }
+[dcrd](https://github.com/decred/dcrd):
 
-[dcrd](https://github.com/decred/dcrd): {}
+A lot of work in Feb was focused on reworking the secp256k1 package to introduce specialized optimizations:
 
-[dcrwallet](https://github.com/decred/dcrwallet): {}
+- secp256k1 package internals [made](https://github.com/decred/dcrd/pull/2056) independent of Go standard library crypto APIs to remove a lot of unnecessary expensive conversions and allow for more optimizations in the future
+- signature verification [implemented](https://github.com/decred/dcrd/pull/2058) directly instead of relying on standard library which will allow optimizations specific for the secp256k1 curve
+- introduced specialized code for [fixed-precision](https://github.com/decred/dcrd/pull/2060) field arithmetic which is significantly faster than arbitrary-precision big integers from the standard library and is also constant time, which helps to protect against certain side channel attacks. Careful gradual migration to use the new code brought speed and memory improvements.
+- added optimized [square root](https://github.com/decred/dcrd/pull/2088) field calculation that is roughly twice faster than with big integers
 
-[Decrediton](https://github.com/decred/decrediton): {}
+Some optimizations are harder to review so great care was taken to introduce them in steps and thoroughly document all techniques used. If you love when math and fast bit-level computation come together this should be a delightful read.
 
-[Politeia](https://github.com/decred/politeia): {}
+{ what does this secp256k1 overhaul mean in the big picture, i.e. is it just for speed in general or a prerequisite for a feature? }
 
-[dcrstakepool](https://github.com/decred/dcrstakepool): {}
+Other improvements:
 
-[dcrpool](https://github.com/decred/dcrpool): {}
+- consensus code [made](https://github.com/decred/dcrd/pull/2031) a bit more robust by being explicit about the script forms it requires instead of [relying](https://github.com/decred/dcrd/pull/2036#issuecomment-583782693) on standardness policy code (e.g. what is permitted to enter to the mempool and be relayed across the network), which may change without a consensus vote
+- allowed vote range [tightened](https://github.com/decred/dcrd/pull/2047) for mainnet to prevent an unlikely DoS vector
+- tickets with non-approved inputs are now tracked [separately](https://github.com/decred/dcrd/pull/1852) to make block template generation and fee estimation more efficient
+- added timeout parameters for [TCP connections](https://github.com/decred/dcrd/pull/2068) and [peer inactivity](https://github.com/decred/dcrd/pull/2067)
+- rpcserver [made](https://github.com/decred/dcrd/pull/2066) explicit about the units it accepts (atoms vs coins) in code, help messages and API docs
+- wire error types [defined](https://github.com/decred/dcrd/pull/2055), work towards [banning peers](https://github.com/decred/dcrd/issues/350) not following the wire protocol
 
-[dcrlnd](https://github.com/decred/dcrlnd): {}
+[dcrwallet](https://github.com/decred/dcrwallet):
 
-[cspp](https://github.com/decred/cspp): {}
+- added command to create [unsigned tickets](https://github.com/decred/dcrwallet/pull/1281) to facilitate offline staking and support Trezor staking in the future { right? }
+- added command to [create signature](https://github.com/decred/dcrwallet/pull/1611) for a transaction input script { what is this intended for? }
+- added [discoverusage](https://github.com/decred/dcrwallet/pull/1643) command to manually trigger the discovery of address and/or account usage without restarting the wallet
+- added RPC to start account [mixing service](https://github.com/decred/dcrwallet/pull/1635) { wasn't mixing possible already? how is this different from current mixing UX? or is it for Decrediton? }
+- repository module structure [simplified](https://github.com/decred/dcrwallet/pull/1642) to reduce maintenance burden
+- added [package](https://github.com/decred/dcrwallet/pull/1664) for generating uniform cryptographically secure pseudo-random numbers
+- changed peer seeding to use [HTTPS API](https://github.com/decred/dcrwallet/pull/1661) { correct? is it a change from DNS to HTTPS API where DNS is no longer used? }
+- cleaned up the code
 
-[dcrdex](https://github.com/decred/dcrdex): {}
+[Decrediton](https://github.com/decred/decrediton):
 
-[dcrandroid](https://github.com/decred/dcrandroid): {}
+- added generation of [BIP-0021](https://github.com/decred/decrediton/pull/2418) URIs for DCR payments
+- added a [warning](https://github.com/decred/decrediton/pull/2413) to back up the redeem scripts
+- codebase updated to [Electron 8](https://github.com/decred/decrediton/pull/2208)
+- bug fixes and UI tweaks
+- large refactoring of the startup logic is nearing completion
 
-[dcrios](https://github.com/raedahgroup/dcrios): {}
+[Politeia](https://github.com/decred/politeia):
 
-[dcrdata](https://github.com/decred/dcrdata): {}
+backend:
 
-[tinydecred](https://github.com/decred/tinydecred): {}
+- sessions [moved](https://github.com/decred/politeia/pull/1113) to userdb to allow manual invalidation of sessions and also as a step to run multiple instances of politeiawww
+- proposal [metadata](https://github.com/decred/politeia/pull/1110) necessary for RFP proposals added to the cache
+- StartVote v2 [merged](https://github.com/decred/politeia/pull/1088) (described in [December](201912.md#development))
+- added backend route to retrieve proposals by a [short token](https://github.com/decred/politeia/pull/1116) (this will allow shorter URLs in the GUI)
+- CMS received preliminary [temporary contractor](https://github.com/decred/politeia/pull/1132) support and a few smaller fixes
 
-[docs](https://github.com/decred/dcrdocs): {}
+frontend:
 
-[decred.org](https://github.com/decred/dcrweb): {}
+- added [flat display](https://github.com/decred/politeiagui/pull/1781) mode for comments to help with spotting new comments easier without hunting them in the whole comment tree
+- UI tweaks and performance optimizations
+- { lots of work going in the cmsv2 branch, please comment }
+
+[dcrpool](https://github.com/decred/dcrpool):
+
+- [new UI design](https://github.com/decred/dcrpool/pull/149) implemented
+- human-friendly [time units](https://github.com/decred/dcrpool/pull/151) in config
+- bug fixes and UI tweaks
+
+[dcrlnd](https://github.com/decred/dcrlnd):
+
+- huge [porting](https://github.com/decred/dcrlnd/pull/74) effort of upstream changes up to the [v0.9.0-beta](https://github.com/lightningnetwork/lnd/releases/tag/v0.9.0-beta) release is complete.
+
+[cspp](https://github.com/decred/cspp):
+
+- multiple fixes and improved error handling
+
+[dcrdex](https://github.com/decred/dcrdex):
+
+Development highlights:
+
+- client [RPC server](https://github.com/decred/dcrdex/pull/133)
+- password-based client [key encryption](https://github.com/decred/dcrdex/pull/155)
+- client [epoch queue](https://github.com/decred/dcrdex/pull/143) { how to say it in English? }
+- [logging in](https://github.com/decred/dcrdex/pull/153) to the client with an app-wide password
+- [implemented](https://github.com/decred/dcrdex/pull/145) a less gameable deterministic order matching [algorithm](https://github.com/decred/dcrdex/issues/67) (spec change [here](https://github.com/decred/dcrdex/pull/83))
+- added [wallets](https://github.com/decred/dcrdex/pull/176) page in browser-based client GUI allowing to create and control exchange wallets
+- client database [backup](https://github.com/decred/dcrdex/pull/183)
+- store all match/swap data in server [database](https://github.com/decred/dcrdex/pull/177)
+- updated build and contributing [instructions](https://github.com/decred/dcrdex/pull/175)
+
+A total of 25 pull requests merged from 7 contributors adding 12K and deleting 3K lines of code.
+
+[dcrandroid](https://github.com/decred/dcrandroid):
+
+- implemented migration to [multi-wallet](https://github.com/decred/dcrandroid/pull/426) format
+- release 1.0.1 { any comment? }
+
+[dcrios](https://github.com/raedahgroup/dcrios):
+
+- new UI implemented for [Wallets](https://github.com/raedahgroup/dcrios/pull/567), [Transactions](https://github.com/raedahgroup/dcrios/pull/569) and [Receive](https://github.com/raedahgroup/dcrios/pull/583) views
+- sync progress display for [multiple wallets](https://github.com/raedahgroup/dcrios/pull/579)
+- unlock to resume [restoration](https://github.com/raedahgroup/dcrios/pull/577) feature
+- release 1.0.1 { any comment? }
+
+[dcrdata](https://github.com/decred/dcrdata):
+
+- new [charts](https://github.com/decred/dcrdata/pull/1640) for mixed amount by day and by block, amount of mixed coins also added to the Circulation chart (currently deployed on [dcrdata alpha](https://alpha.dcrdata.org/))
+- [smooth mode](https://github.com/decred/dcrdata/pull/1678) for ticket charts
+- bug fixes and UI tweaks
+
+[tinydecred](https://github.com/decred/tinydecred):
+
+- a lot of work was put to streamline test code and increase test coverage
+- RPC client [finished](https://github.com/decred/tinydecred/pull/73)
+- streamlined [error handling](https://github.com/decred/tinydecred/pull/81)
+
+[docs](https://github.com/decred/dcrdocs):
+
+- [new](https://github.com/decred/dcrdocs/pull/1040) pages for CoinShuffle++ [Overview](https://docs.decred.org/privacy/cspp/overview/) and [How to use](https://docs.decred.org/privacy/cspp/how-to-cspp/)
+- added [advice](https://github.com/decred/dcrdocs/pull/1068) how to run dcrd and dcrwallet as system services
+- [polished](https://github.com/decred/dcrdocs/pull/1064) LN docs
+
+[decred.org](https://github.com/decred/dcrweb):
+
+- mentions of Slack [removed](https://github.com/decred/dcrweb/pull/780)
 
 Other:
 
-- {smaller items go here}
 - https://bounty.decred.org/2020/02/status-update/
 
 Dev activity stats for February: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
