--- a/journal/202002.md
+++ b/journal/202002.md
@@ -390,6 +390,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: {}
+- writing and editing: bee, degeri, Dustorf, richardred
 - reviews and feedback: {}
 - title image: {}
