--- a/journal/202002.md
+++ b/journal/202002.md
@@ -344,43 +344,43 @@ In February DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average d
 
 {cc tech: PoW, ASIC resistance, full nodes, cc network security, etc}
 
-{governance, funding, chain forks, community forks}
-
-{ETH ProgPow controversy}
-
-- twitter poll https://twitter.com/crypt0snews/status/1231288498474209280
-- https://twitter.com/RichardRed0x/status/1232870918302715904
-- #NoProgPoW
-
-{EOS unexpectedly} https://twitter.com/RichardRed0x/status/1232437596019494912
-
-{Iota} https://twitter.com/Theeylon/status/1232594929823756288
-
-{ drop if this was covered in Jan } https://www.coindesk.com/zcashs-funding-vote-and-the-problems-with-decentralized-governance
-
-{what BCH/LTC/BTC funding dramas mentioned in https://twitter.com/michae2xl/status/1231642734185844737 ? }
-
 {DEX}
 
-Binance not liking CoinJoin, wake-up call:
+The Ethereum ProgPoW debate was re-ignited in style when it was approved to go into a hard fork on the core devs call, resulting in bafflement among many in the wider Ethereum community, where ProgPoW does not have as much support. This [post](https://hudsonjameson.com/2020-03-02-progpow-the-ethereum-community-speaks/) from Hudson Jameson gives an account of the history of ProgPoW and comes to the conclusion that while the change is probably good, threats to maintain a contentious hard fork must be taken seriously and it is not worth forking the network over. The Ethereum community is using a variety of signalling mechanisms, including twitter [polls](https://twitter.com/crypt0snews/status/1231288498474209280) and EIP [open letters](https://github.com/MidnightOnMars/EIPs/blob/master/EIPS/eip-2538.md)  with hashtag campaigns. As Hudson's post details, there have already been extensive efforts to gauge Ethereum community sentiment about ProgPoW, and both a coin vote and miner vote were strongly in favor of ProgPoW. A variety of other methods have been used to gather signals from the community, including [Kialo](https://www.kialo.com/ethereum-and-programmatic-proof-of-work-progpow-30878) and any number of reddit posts I'm sure. @checkmate has joined the debate with some [observations](https://medium.com/@_Checkmatey_/observing-ethereum-governance-during-the-progpow-debate-9bf1aec724ad) on how this is being handled, informed by his experience with Decred's approach. The problem with informal governance is that regardless of the amount of signal collection that takes place and whether everyone has a chance to speak, there will inevitably be a few people who have to make a judgment call and push forward to draw a line under it. It's a messy process and in the end very few people feel satisfied with the outcome.
 
-- https://cointelegraph.com/news/binance-returns-frozen-btc-after-user-promises-not-to-use-coinjoin
-- DCR traders on Binance need to take this into account when using Decred's mixing features.
-- any follow-up?
+There are indications of significant [strife](https://decrypt.co/19769/zaki-manian-cosmos-number-two-resigns) at Tendermint, the company behind the Cosmos blockchain - with number 2 Zaki Manian resigning saying the CEO (Jae Kwon) is making progress difficult by under-resourcing development and focusing on a new project (Virgo) and twitter persona (@jaesustein). Cosmos collected $17 million in a 2017 ICO, worth some $1 billion a few months later, in Mar 2019 the project raised another $9 million when the first iteration of the network launched, but the signs now are that progress towards a functioning blockchain hub has been limited since then.
+
+Block.one CEO Brendan Blumer [woke](https://twitter.com/BrendanBlumer/status/1232318319061061632) up to find that the rules of the EOS network had been changed overnight, with 15 BPs proposing and passing the change to reduce issuance from 5% to 1%. That it happened is not exactly a surprise, because at no point has any significant effort been put into developing the planned "Worker Proposal System" described in the white paper. The unused 4% has been building up in an unused address, and the accumulated EOS has already been burned once. Why the WPF fund was finally shut down on this particular night 18 months later is a mystery that only the 15 EOS BPs involved know the answer to. Nobody even gave Brendan a heads up! He's fine with it though, rules changing overnight is how decentralized governance works when there are only 15 parties involved.
+
+The Bitcoin ABC developers have [released](https://www.bitcoinabc.org/2020-02-15-miner-fund/) details of their plan to implement a variant of the block reward funding proposed by Jiang Zhuoer of BTC.TOP. This implementation will alter the following details of the plan: amount reduced to 5%, funds can go to any whitelisted project, and the plan will only go into effect if triggered by miners via BIP9. There remains considerable [opposition](https://twitter.com/PeterRizun/status/1228787028734574592) to the idea of any developer funding from the BCH block reward. 
+
+Binance has been engaged in a [dispute](https://cointelegraph.com/news/binance-returns-frozen-btc-after-user-promises-not-to-use-coinjoin) with one of its users who had used the Wasabi wallet to CoinJoin mix their transactions and enhance their privacy. The mixing activity elevated the user's risk score and their funds were frozen while Binance investigated. Eventually the user agreed to withdraw their funds, which were not welcomed by Binance, who referenced compliance with Singapore law to explain their actions. So far there have been no reports of DCR mixers being flagged in this way.
+
+The privacy implications of Ethereum Name Service (.ens) domains were considered by Tim Copeland in an [article](https://decrypt.co/19423/we-tracked-133000-ethereum-names-and-exposed-their-secrets) in Decrypt. Although many users were aware that they could damage their privacy by linking their domain address to their other addresses, the transaction they used to pay for their .ens could also be used to link them to their funds.
 
 {relevant exchanges and websites}
 
-"interruptions" in XTZ withdrawals {more data would be nice} https://twitter.com/Lindw0rm/status/1227696463574118400
+"interruptions" in XTZ withdrawals {more data would be nice} https://twitter.com/Lindw0rm/status/1227696463574118400 {rr: don't see much other indication that this was a significant story}
 
 {other: regulations, privacy, security, fun}
 
-Blockstream bank?! https://coinspice.io/news/blockstream-bank-to-service-institutional-customers-plans-early-2021-opening/
+Blockstream are getting into [banking](https://coinspice.io/news/blockstream-bank-to-service-institutional-customers-plans-early-2021-opening/), being named as a strategic technology partner of Avanti Financial Group, a [new](https://avantibank.com/) US bank dedicated to digital assets.
 
-Casa goes open-source
+> Avanti is supported by a strategic technology partnership with Blockstream, the leading software company focused on the Bitcoin protocol. Terms were not disclosed.
 
-- https://www.coindesk.com/bitcoin-startup-casa-names-new-ceo-as-node-service-goes-open-source
-- https://blog.keys.casa/open-sourcing-the-casa-node/
-- https://blog.keys.casa/casas-focus-on-bitcoin-security/
+Casa is winding [down](https://www.coindesk.com/bitcoin-startup-casa-names-new-ceo-as-node-service-goes-open-source) its node hardware product, of which it has sold 2,000 units, and also [open](https://blog.keys.casa/open-sourcing-the-casa-node/) sourcing its code. Casa will focus on its $10/month subscription service for key management.
+
+Justin Sun of Tron had a busy month, [buying](https://news.bitcoin.com/steemit-for-sale-tron/) the content website steemit which is built on (and the main use of) the Steem blockchain and immediately announcing that steemit would be moving to the Tron blockchain. This led the Steem witnesses (block producers) to enact a soft [fork](https://www.coindesk.com/justin-sun-bought-steemit-steem-moved-to-limit-his-power) which would freeze the "Steemit Inc ninja-mined stake”, an unknown large quantity of STEEM held in a number of accounts by the company. On Mar 1, Justin [struck](https://www.coindesk.com/steem-community-mobilizes-popular-vote-in-battle-with-justin-sun) back by recruiting exchanges (Binance and Huobi) to vote for a set of witnesses under his control that would revert the soft fork and free the Steemit STEEM. After backlash from users it appeared that both [Binance](https://twitter.com/cz_binance/status/1234676941111742467) and [Huobi](https://medium.com/huobi-global/community-counts-a-letter-to-the-steem-community-340881448ea7) were going to unstake their STEEM and pull out of whatever arrangement they had with Sun. 
+
+There has also been some [suggestion](https://bitcoinexchangeguide.com/did-justin-sun-rig-super-rep-election-two-tron-dapps-received-votes-from-zion-account/) that Justin Sun used votes from the "Zion" account to interfere with community voting - which he [appeared](https://twitter.com/justinsuntron/status/1230215220884201472) to confirm, stating that it was temporary until 3 super representatives upgrade their software, to "prevent them from harming the network".
+
+IOTA's coordinator was turned off, [pausing](https://bitcoinist.com/iota-trinity-wallet-vulnerability-1-6-million-stolen/) the network, on Feb 13, to investigate claims of Trinity wallet thefts totalling $1.6 million. IOTA entered a state of elevated calamity when, after several days of down-time with the coordinator switched off, it was [revealed](https://blog.iota.org/trinity-attack-incident-part-1-summary-and-next-steps-8c7ccc4d81e8) that all the private keys of all users of the desktop Trinity client (maintained by the IOTA Foundation) had been compromised. 8.55 Ti of IOTA has been stolen, worth about $2.3 million at the time.  Trinity was compromised by malicious code inserted in a 3rd party dependency of the MoonPay service that enabled users to buy IOTA tokens directly within Trinity. The [latest](https://cointelegraph.com/news/iota-prepares-to-relaunch-network-in-one-week) is that there is a fixed version of Trinity and a seed migration tool and IOTA holders have 7 days to undergo the transfer procedure before the foundation re-starts the network between Mar 7 and Mar 10.  IOTA has lost 30% of its value in USD terms at time of writing (Mar 5), but users who hold their own IOTA have been unable to move them since the network was paused.
+
+Aragon Court [launched](https://blog.aragon.org/launching-aragon-court/), aiming to provide a digital jurisdiction for DAOs to operate in. In Aragon Court disputes are resolved by jurors who stake ANJ tokens and try to guess the decision that the majority of jurors will choose. 247 jurors signed up for the launch by collectively staking 1 million ANT (worth ~$1.3 million). To start with jurors are completing a "[precedence campaign](https://blog.aragon.org/precedence-campaign-primer/)" (juror training exercise) with [mock](https://twitter.com/Yazanator/status/1228752714873462784) disputes. 
+
+DeFi project bZx has been at the center of a number of [stories](https://www.coindesk.com/everything-you-ever-wanted-to-know-about-the-defi-flash-loan-attack) about exploits this month, with its new "flash loan" feature being used in creative ways to set up series of transactions that manipulated price oracles and immediately profited from them. The novel aspect of these exploits is that the transactions are all processed in the same block, either there is a profit for the attacker or the transaction is not valid - making it very low risk for the attacker as they are not required to provide collateral. After the exploit, the master key was used to edit the smart contracts so that they could not be executed the same way.
+
+Another group came [forward](https://medium.com/@1inch.exchange/yes-we-hacked-bzx-fulcrum-but-one-month-ago-3f7e5c437ee3) to say they had warned bZx about a different issue a month earlier and were not impressed with their response, including refusing to pay a reasonable bounty based on a technicality.
 
 ## About This Issue
 
