--- a/journal/202002.md
+++ b/journal/202002.md
@@ -348,7 +348,7 @@ In February DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average d
 
 The Ethereum ProgPoW debate was re-ignited in style when it was approved to go into a hard fork on the core devs call, resulting in bafflement among many in the wider Ethereum community, where ProgPoW does not have as much support. This [post](https://hudsonjameson.com/2020-03-02-progpow-the-ethereum-community-speaks/) from Hudson Jameson gives an account of the history of ProgPoW and comes to the conclusion that while the change is probably good, threats to maintain a contentious hard fork must be taken seriously and it is not worth forking the network over. The Ethereum community is using a variety of signalling mechanisms, including twitter [polls](https://twitter.com/crypt0snews/status/1231288498474209280) and EIP [open letters](https://github.com/MidnightOnMars/EIPs/blob/master/EIPS/eip-2538.md)  with hashtag campaigns. As Hudson's post details, there have already been extensive efforts to gauge Ethereum community sentiment about ProgPoW, and both a coin vote and miner vote were strongly in favor of ProgPoW. A variety of other methods have been used to gather signals from the community, including [Kialo](https://www.kialo.com/ethereum-and-programmatic-proof-of-work-progpow-30878) and any number of reddit posts I'm sure. @checkmate has joined the debate with some [observations](https://medium.com/@_Checkmatey_/observing-ethereum-governance-during-the-progpow-debate-9bf1aec724ad) on how this is being handled, informed by his experience with Decred's approach. The problem with informal governance is that regardless of the amount of signal collection that takes place and whether everyone has a chance to speak, there will inevitably be a few people who have to make a judgment call and push forward to draw a line under it. It's a messy process and in the end very few people feel satisfied with the outcome.
 
-There are indications of significant [strife](https://decrypt.co/19769/zaki-manian-cosmos-number-two-resigns) at Tendermint, the company behind the Cosmos blockchain - with number 2 Zaki Manian resigning saying the CEO (Jae Kwon) is making progress difficult by under-resourcing development and focusing on a new project (Virgo) and twitter persona (@jaesustein). Cosmos collected $17 million in a 2017 ICO, worth some $1 billion a few months later, in Mar 2019 the project raised another $9 million when the first iteration of the network launched, but the signs now are that progress towards a functioning blockchain hub has been limited since then.
+There are indications of significant [strife](https://decrypt.co/19769/zaki-manian-cosmos-number-two-resigns) at Tendermint, the company behind the Cosmos blockchain - with number two Zaki Manian resigning from Tendermint to form his own Cosmos focused company, saying the CEO (Jae Kwon) is making progress difficult by under-resourcing development and focusing on a new project (Virgo) and twitter persona (@jaesustein). This [update](https://gist.github.com/jaekwon/8861452eea20def46b89dfcc79c9212e#file-zaki_and_ref_god-md) from jaekwon illustrates the unusual degree to which the concept of godliness has come into play in the spat. Cosmos collected $17 million in a 2017 ICO, worth some $1 billion a few months later, in Mar 2019 the project raised another $9 million when the first iteration of the network launched, but the signs now are that progress towards a functioning blockchain hub has been limited since then.
 
 Block.one CEO Brendan Blumer [woke](https://twitter.com/BrendanBlumer/status/1232318319061061632) up to find that the rules of the EOS network had been changed overnight, with 15 BPs proposing and passing the change to reduce issuance from 5% to 1%. That it happened is not exactly a surprise, because at no point has any significant effort been put into developing the planned "Worker Proposal System" described in the white paper. The unused 4% has been building up in an unused address, and the accumulated EOS has already been burned once. Why the WPF fund was finally shut down on this particular night 18 months later is a mystery that only the 15 EOS BPs involved know the answer to. Nobody even gave Brendan a heads up! He's fine with it though, rules changing overnight is how decentralized governance works when there are only 15 parties involved.
 
