--- a/journal/202002.md
+++ b/journal/202002.md
@@ -256,7 +256,18 @@ Tweeted [thoughts](https://twitter.com/lefebvre_dustin/status/122546242650369638
 
 https://twitter.com/DCRComic/status/1226224719604613120?s=20
 
+February PR Achievements 
 
+Completed PR Prep: 
+- PR Materials document
+- Competitor Analytics
+- Target media lists 
+- PR Calendar 
+ 
+News articles: 
+- An [article] (https://cointelegraph.com/news/the-state-of-blockchain-experts-weigh-in-on-adoption-around-the-world) in Cointelegraph featuring @elian and @akin’s commentary on the adoption of blockchain around the world
+- An [article] (https://www.financemagnates.com/cryptocurrency/news/does-china-control-bitcoin-and-ethereum/) in Finance Magnates featuring @jy-p’s commentary on the centralization of Bitcion mining and consensus models 
+- An [article] (https://eng.ambcrypto.com/bitcoin-building-a-nation-on-the-foundation-of-maximalism/) in AMB Crypto featuring commentary from @richardred on Bitcion building a nation
 
 ## Events
 
