--- a/journal/202002.md
+++ b/journal/202002.md
@@ -343,7 +343,7 @@ Selected Twitter discussions:
 - @Exitus identified and extracted a [clip](https://twitter.com/coveryfire7777/status/1229517588138528768) from an Ark Invest video, where Cathie Wood mentions Decred as "promising".
 - @degeri [shared](https://twitter.com/degeri_crypto/status/1233658256737918976) a screengrab from Altered Carbon Season 2 Episode 5, where prices are quoted on screen in a range of cryptocurrencies, including Decred. DCR is the only currency shown with two numbers, and this cued speculation about what that meant for the interpretation of this year 2400 DCR price prediction.
 - @jy-p is back on twitter after a long hiatus, and he's [wondering](https://twitter.com/behindtext/status/1232381271252271104) what people who work on cc projects and aren't actively engineering out oracles are doing.
-- @richardred [thread](htt2020-03ps://twitter.com/RichardRed0x/status/1231223498787508224) about Decred DAO, prompted by a [response](https://medium.com/@rzs/im-continually-amazed-at-the-lack-of-attention-decred-gets-4a40679246ba) on Medium asking why Decred was not featured in a DAO [update](https://medium.com/@rebeccarachmany/dao-falloff-and-revival-2cf74f3c18c1).
+- @richardred [thread](https://twitter.com/RichardRed0x/status/1231223498787508224) about Decred DAO, prompted by a [response](https://medium.com/@rzs/im-continually-amazed-at-the-lack-of-attention-decred-gets-4a40679246ba) on Medium asking why Decred was not featured in a DAO [update](https://medium.com/@rebeccarachmany/dao-falloff-and-revival-2cf74f3c18c1).
 - DCRComic [DCR Time]( https://twitter.com/DCRComic/status/1232714622819602432)
 - Chris Burniske with a nice Joel Monegro [quote](https://twitter.com/cburniske/status/1227617853211336704) from his Sovereign Cryptonetworks paper, about Decred being set up for long-term sovereignty thanks to its decentralized governance principles.
 - @checkmate sums up the [Treasury](https://twitter.com/_Checkmatey_/status/1224764330878603266) as the beating heart of the Decred project.
