--- a/journal/202002.md
+++ b/journal/202002.md
@@ -6,9 +6,14 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 {introduction, major news of the month ordered by impact, don't put any links here}
 
+- anniversary celebration
+- 2019 marketing report
+- new PR down to work
+- { DEX progress? }
+
 ## DCP0005 activation reminder
 
-{date?}
+{Xth vote passed, upgrade reminder, fork date?}
 
 ## Development
 
