--- a/journal/202002.md
+++ b/journal/202002.md
@@ -362,7 +362,7 @@ Audio:
 Comm systems news:
 
 - The Slack bridge to Matrix and Discord was decommissioned on Feb 28 and most of the channels shuttered. Those who wished to continue following and participating in the chats moved to Matrix and Discord, to the rest we say a fond farewell.
-- @Exitus purged inactive accounts from Discord, cementing his iron grip on power  among the denizens of Decred Discord.
+- @Exitus purged inactive accounts from Discord, cementing his iron grip on power among the denizens of Decred Discord. The pruning removed accounts that were not verified and had not logged on in over 30 days. Any account removed is free to re-join and go through the verification process.
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
