--- a/journal/202002.md
+++ b/journal/202002.md
@@ -281,13 +281,41 @@ News articles:
 
 Attended:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {recap}
+- Feb 4-6 - [Africa Tech Summit](https://www.africatechsummit.com/kigali/) - Kigali, Rwanda. @akinsawyerr and @beansgum attended this 600+ visitor event and Akin shared his experience of connecting with regulators, startups and VCs in a [full report](https://github.com/decredcommunity/events/blob/master/reports/20200204-africa-tech-summit-kigali-rwanda.md). "When Decred is ready to actively pursue use cases that build on our stack there will be a lot of open and able hands available to engage with".
+- Feb 6 - [Decred Global Meetup](https://www.meetup.com/Chicago-Decred-Meetup/events/267784883/) - Chicago, USA. ([notes](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158109310014665NneQF:decred.org))
+- Feb 6 - [Decred Global Meetup](https://www.meetup.com/DecredBrasil/events/268457863/) - Belo Horizonte - Brazil. ([photo](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158103220814414Mzamc:decred.org))
+- Feb 6 - [Decred Global Meetup](https://www.eventbrite.com/e/decredglobalmeetup-en-buenos-aires-tickets-90817259869) - Buenos Aires, Argentina. Hosted by @EspacioBitcoin. (photos: [1](https://twitter.com/plabarta_/status/1225595614324498433), [2](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158103346814429gFjNa:decred.org))
+- Feb 6 - [Decred Global Meetup](https://www.eventbrite.com/e/decredglobalmeetup-ciudad-de-mexico-en-bitcoin-embassy-bar-tickets-90619377999) - Mexico City, Mexico. Hosted by Bitcoin Embassy Bar. ([photo](https://twitter.com/bitcoinemb/status/1225602840808345602), [video](https://twitter.com/Decred_ES/status/1225656932431626241))
+- Feb 6 - [Decred Global Meetup](https://www.meetup.com/DecredBrasil/events/268449660/) - Natal, Brazil. @guisso: "funny part of the t-shirts is that at the beginning they were displayed on the entrance table and nobody showed interest, but at the end of the event, when they got to know the project, everyone wanted to participate in the draw". ([photo](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$158119754415294gLBgk:decred.org))
+- Feb 6 - [Decred Global Meetup](https://www.meetup.com/DecredBrasil/events/268455983/) - Rio de Janeiro, Brazil. There was no shortage of beer. ([photo](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$158119750815292FWqOn:decred.org))
+- Feb 6 - [Decred Global Meetup](https://www.meetup.com/DecredBrasil/events/268456316/) - São Paulo, Brazil. ([photo](https://twitter.com/Decred_ES/status/1225574822928928768))
+- Feb 6 - [Discover Decred](https://www.meetup.com/DecredCanada/events/268147731/) - Toronto, Canada. ([photo](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158104000314467WqrCH:decred.org))
+- Feb 8 - [Decred Global Meetup](https://www.meetup.com/DecredBrasil/events/268496816/) - Salvador, Brazil. ([photos](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$158119740315283cQkoQ:decred.org))
+- Feb 8 - [Blockchain and AI](https://www.eventbrite.com/e/blockchain-and-ai-best-tools-for-the-development-of-nations-tickets-91389994935) - Casablanca, Morocco. This event featured second publicly known Decred Cake. (photos: [twitter](https://twitter.com/DecredArabia/status/1226266689492410368), [matrix](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158119875815325RomyP:decred.org))
+- Feb 8 - [Decred Crypto Hangout](https://www.eventbrite.com/e/decred-crypto-hangout-learn-about-career-opportunities-in-the-industry-tickets-91830803405) - Lagos, Nigeria. Five Decred contributors shared knowledge about various aspects of Decred. The event was attended by 25+ people and representatives of @yellowcardio, @HuobiAfrica and @Telos4africa. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200208-decred-crypto-hangout-lagos-nigeria.md))
+- Feb 27 - [3er After UX Crypto](https://www.eventbrite.com.ar/e/3er-after-ux-crypto-sponsor-decred-tickets-95737271757) - Santa Fe, Argentina. Decred was a sponsor. ([photos](Decred_ES/status/1233159907194605572))
+- Feb 27 - Decred and Stamping.io Meetup - Lima, Peru. @victorarubin presented Decred to Stamping.io and Life Leadership community in Lima, about 60 people attended. ([video](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$1582953585375340iScnJ:matrix.org))
 
 Upcoming:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
-
-{announcements in Events domain}
+- Mar 12 - Women in Blockchain - Mexico City, Mexico. Hosted by Bitcoin Embassy Bar.
+- Mar 12 - Decred Meetup - Montevideo, Uruguay.
+- Mar 12-13 - [Blockchain Summit Latam](https://www.blockchainsummit.la) - Panama City, Panama. Decred will be a silver sponsor.
+- Mar 17 - Decred Meetup - Bilbao, Spain.
+- Mar 18 - Decred Meetup - Barcelona, Spain.
+- Mar 18 - [Campus Party Amazonia](https://brasil.campus-party.org/campus-party-amazonia-2020/) - Manaus, Brazil. Decred will have 2 talks and several other activities.
+- Mar 20 - [BlockchainUA](https://blockchainua.com/en/) - Kyiv, Ukraine. Speakers are wanted to represent Decred at the biggest event in Eastern Europe. Contact @cryptotexty in the [#events](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org) room for details.
+- Mar 20-21 - [CIBTC Blockchain Summit](http://cibtc.es/) - Motril, Spain. Decred will be a gold sponsor.
+- Mar 24 - Decred Meetup - Santiago, Chile.
+- Mar 24 - Decred Meetup - Madrid, Spain.
+- Mar 26 - Decred Meetup - Vigo, Spain.
+- Mar 27 - Decred Meetup - Valencia, Spain.
+- Apr 5 - [Toronto Blockchain Week](https://www.eventbrite.ca/e/discover-decred-an-autonomous-digital-currency-toronto-blockchain-week-tickets-91562362491) - Toronto, Canada. @ammarooni, @michae2xl and likely also @zubair are planning on being there.
+- Apr 9 - Bitcoin Road trip - Buenos Aires, Argentina.
+- Apr 13-17 - [Jalisco Talend Land](https://www.talent-land.mx/en/home/) - Guadalajara, Mexico. Decred is a Bronze sponsor.
+- Apr 24 - Decred Meetup - La Paz, Bolivia.
+- May 6 - [Bitcoinference](https://www.eventbrite.com/e/bitcoinference-where-the-blockchain-meets-you-tickets-94598812595) - Cancún, Mexico.
+- May 30-31 - [Bitconf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. Decred will have multiple talks on various subjects.
 
 ## Media
 
