--- a/journal/202002.md
+++ b/journal/202002.md
@@ -192,16 +192,13 @@ For more detail on the month's Politeia activity see Politeia Digest [issue 27](
 
 ## Network
 
-{ hint: cross-check dcrdata.org, dcrstats.com and charts.dcr.farm to get the numbers }
+Hashrate: February's hashrate opened at ~427 Ph/s and closed ~356 Ph/s, bottoming at 263 Ph/s and peaking at 578 Ph/s throughout the month. Pool hashrate distribution as of Mar 1: Poolin 32%, UUPool 27%, lab.antpool.com 12%, BTC.com 1.7%, F2Pool 1.5%, Luxor 1.3%,  BeePool 0.1%, CoinMine 0.02% and others ~24% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-Hashrate: February's hashrate opened at ~427 Ph/s and closed ~356 Ph/s, bottoming at 306 Ph/s and peaking at 450 Ph/s throughout the month. Pool hashrate distribution as of March 1: Poolin 32.10%, UUPool 26.66%, lab.antpool.com 12.66%, BTC.com 1.72%, F2Pool 1.47%, Luxor 1.31%,  BeePool 0.10%, CoinMine 0.02% and others ~23.89% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+Staking: 30-day average ticket price was 132.1 DCR (-6.2) per dcrstats.com as of Mar 5. The price varied between 119.8-157.9 DCR. Locked amount was 5.40-5.65 million DCR, which corresponded to 48.49-51.19% of the circulating supply.
 
-Staking: 30-day average ticket price was 132.12 DCR (-6.18) per dcrstats.com. The price varied between 119.8-157.8 DCR. Locked amount was 5.41-5.69 million DCR, which corresponded to 48.61-51.86% of the available supply.
+Since late Jan the amount of [staked DCR](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=k38z10xk-k7kaa0dk&bin=block&axis=time) experienced a ~30-day decline from ~5.65M to ~5.40M, or ~51.5% to ~48.5% (-3%) of the circulating supply, followed by a recovery to ~50%. The ticket price went down as low as 119.8 DCR but then quickly shot up to new levels.
 
-The ticket price went down as low as 119.8 DCR and then quickly shotup to new levels.
-
-Nodes: Throughout February there was an average of 166 public listening nodes and 331 normal nodes per dcr.farm. Average version distribution for Feb: 63% use dcrd v1.4, 25.3% use dcrd v1.5, 14.1% use dcrd v1.5 dev and RC builds, 16.59% use dcrd v1.5.1, 5.8% use dcrd v1.6 dev builds, 8.29% use dcrwallet v1.4, 5.39% use dcrwallet v1.5, 2.9% use dcrwallet v1.5.1.
-
+Nodes: Throughout [February](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1580515200000&to=1583020800000) there was an average of 165 public listening nodes and 341 total nodes per dcr.farm. Average version distribution for Feb: 40.8% use dcrd v1.4, 18.2% use dcrd v1.5, 9.1% use dcrd v1.5 dev and RC builds, 12.3% use dcrd v1.5.1, 4.1% use dcrd v1.6 dev builds, 4.7% use dcrwallet v1.4, 2.6% use dcrwallet v1.5, 2.1% use dcrwallet v1.5.1.
 
 ## Integrations
 
