--- a/journal/202002.md
+++ b/journal/202002.md
@@ -202,32 +202,21 @@ Nodes: Throughout [February](https://charts.dcr.farm/d/000000014/nodes?orgId=1&f
 
 ## Integrations
 
-{ hint: new items of infrastructure or updates from existing }
+**Caution**: There have been a [report](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$158343614832392oTHUs:decred.org) of a DCR holder taking losses to a scam Chrome extension for the Ledger wallet that asked for wallet seed. It looks like Google has removed it but only after many people got burned. Pay great attention to what software you trust the seed!
 
-Exchanges:
+OKCoin decided to [suspend](https://blog.okcoin.com/scheduled-token-suspensions/) DCR trading because of low trading volume, despite being enthusiastic about Decred initially and even hosting several joint events.
 
-- Despite being enthusiastic about Decred initially, and even hosting several joint events, OKCoin decided to suspend DCR because of low trading volume https://blog.okcoin.com/scheduled-token-suspensions/
-- KuCoin [announced](https://www.kucoin.com/news/en-decred-soft-staking-official-rules) on Feb 17 that it was going to begin staking its depositors' DCR two days later, on Feb 19. Kucoin users who hold DCR on the exchange were informed that they were being opted-in automatically, and instructed to withdraw their funds immediately if they wished to opt out.
+KuCoin [announced](https://www.kucoin.com/news/en-decred-soft-staking-official-rules) on Feb 17 that it was going to begin staking its depositors' DCR two days later, on Feb 19. KuCoin users who hold DCR on the exchange were informed that they were being opted-in automatically, and instructed to withdraw their funds immediately if they wished to opt out.
 
-> KUCOIN will adjust the staking proportion of Decred every calendar day and calculate the daily revenue of the users... Users have to take note that due to the participation of the Program, there will be a potential risk that a user may not be able to withdraw his/her designated Decred in a timely manner or as he/she so expected although KUCOIN will use its best efforts to avoid such inevitably delay.
+> KuCoin will adjust the staking proportion of Decred every calendar day and calculate the daily revenue of the users (...) Users have to take note that due to the participation of the Program, there will be a potential risk that a user may not be able to withdraw his/her designated Decred in a timely manner or as he/she so expected although KuCoin will use its best efforts to avoid such inevitably delay.
 
-As the staked DCR will be time-locked, Kucoin's capacity to provide it to depositors will depend on enough of their tickets voting, to free up the deposited DCR so that they can process withdrawals. 
+As the staked DCR will be time-locked, KuCoin's capacity to provide it to depositors will depend on enough of their tickets voting, to free up the deposited DCR so that they can process withdrawals. 
 
-> **A Separate Project:** The Service provided by KUCOIN herein will only affect the Decred withdrawal, and will not directly or indirectly affect: (1) the trading of Decred assets on our platform; and (2) the trading or withdrawal of any other digital asset on our platform. As such, in the event that any user is reluctant to follow the withdrawal sequence but are already lined up in the withdrawal queue, the said user may choose to exchange Decred with other tokens, and withdraw the exchanged tokens immediately.
+> A Separate Project: The Service provided by KuCoin herein will only affect the Decred withdrawal, and will not directly or indirectly affect: (1) the trading of Decred assets on our platform; and (2) the trading or withdrawal of any other digital asset on our platform. As such, in the event that any user is reluctant to follow the withdrawal sequence but are already lined up in the withdrawal queue, the said user may choose to exchange Decred with other tokens, and withdraw the exchanged tokens immediately.
 
-This indicates that, in a scenario where too much of Kucoin's DCR is staked to be able to meet withdrawal demand, users will still be able to trade that DCR on the market, e.g.  in exchange for BTC. Any protracted delay in processing withdrawals is likely to depress the DCR price on Kucoin, if it becomes widely known that they are not able to meet withdrawal requests in a timely fashion.
+This indicates that, in a scenario where too much of KuCoin's DCR is staked to be able to meet withdrawal demand, users will still be able to trade that DCR on the market, e.g. in exchange for BTC. Any protracted delay in processing withdrawals is likely to depress the DCR price on KuCoin, if it becomes widely known that they are not able to meet withdrawal requests in a timely fashion.
 
-The announcement does not specify any fee that Kucoin will collect for provision of this service. Whether this means they're not taking a commission, or the commission percentage is just not stated, remains to be seen. 
-
-
-
-
-
-{OTC desks}
-
-{payment processors}
-
-{wallets}
+The announcement does not specify any fee that KuCoin will collect for provision of this service. Whether this means they're not taking a commission, or the commission percentage is just not stated, remains to be seen.
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
