--- a/journal/202002.md
+++ b/journal/202002.md
@@ -183,7 +183,7 @@ Our Network [issue 6](https://ournetwork.substack.com/p/our-network-issue-6) had
 In February there were 4 new [proposals](https://dcrdata.decred.org/proposals) submitted, and 5 started voting.
 
 - @Exitus' video production proposal which requested up to $2,400 per month was approved with 92.5% approval and voter participation of 24.8%.
-- @Checkmate's second research proposal was approved with an approval rate of 81% and voter participation of 21.5%. It requested a budget of $17,500 to continue @Checkmate's research and other activities, including helping to get some charts from his and @PermabullNino's work onto dcrdata. 
+- @Checkmate's second research proposal was approved with an approval rate of 81% and voter participation of 21.5%. It requested a budget of $17,500 to continue @Checkmate's research and other activities, including helping to get some charts from his and @permabullnino's work onto dcrdata. 
 - The proposal for European marketing and events from @Haon and supported by @jholdstock, @kozel, @jazzah, @mm and @karamble initially requested $75,000 but reduced the budget to $49,000 and removed the Web Summit even in response to feedback. The proposal was rejected on Mar 3 by gaining only 38% support and voter participation of 25%.
 - The Russian video production proposal was rejected with 21% approval and 20% turnout.
 - The Decred Creative Economy proposal from oscargamboae was rejected with 3% approval, and becomes the first proposal to fail to meet the 20% quorum requirement, with just 15% of eligible tickets turning out to vote.
@@ -222,36 +222,21 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 ## Outreach
 
-On February 8th, Decred turned four, and the community celebrated the event with #DecredGlobalMeetup. Events took place in at least a dozen cities all across the world to celebrate the community and technology Decred has built. @Dustorf wrote [a blog summarizing Decred's progress to date](https://medium.com/@dlefebvr/on-saturday-february-8th-the-decred-blockchain-will-have-been-adding-blocks-for-4-years-17fe3038f3bf).
+On February 8th, Decred turned four, and the community celebrated the event with [#DecredGlobalMeetup](https://twitter.com/hashtag/DecredGlobalMeetup). Events took place in at least a dozen cities all across the world to celebrate the community and technology Decred has built. @Dustorf wrote [a blog](https://medium.com/@dlefebvr/on-saturday-february-8th-the-decred-blockchain-will-have-been-adding-blocks-for-4-years-17fe3038f3bf) and a [tweet thread](https://twitter.com/lefebvre_dustin/status/1225462426503696384) summarizing Decred's progress to date.
 
-@Dustorf published a [Marketing Report](https://blog.decred.org/2020/02/26/Decred-2019-Marketing-Report/) on the Decred blog detailing all project marketing related expenses from last year. The report includes an examination of what worked and what didn't, as well as prescriptions for next year. The three high level recommendations include: imagine what can be achieved socially using the Decred technology stack, break the bubble to expand Decred beyond those currently in crypto, and leveraging the power of every individual within the community. The report calls for a decentralization of marketing efforts by geography. To that end, Latin America has already passed a proposal. The European proposal was made, but failed. It is expected that proposals for Brazil, the United States and Canada, Australia, and Europe will be made in March.
+@Dustorf published a [Marketing Report](https://blog.decred.org/2020/02/26/Decred-2019-Marketing-Report/) detailing all project marketing related expenses in 2019. The report includes an examination of what worked and what didn't, as well as prescriptions for next year. The three high level recommendations include: imagine what can be achieved socially using the Decred technology stack, break the bubble to expand Decred beyond those currently in crypto, and leveraging the power of every individual within the community. The report calls for a decentralization of marketing efforts by geography. To that end, Latin America has already passed a proposal. The European proposal was made, but failed. It is expected that proposals for Brazil, United States, Canada, and Australia will be made in March.
 
-Monde PR came on board and quickly established project public relations goals, target audiences, key messages, established credibility bullet points, documented key topics, performed a competitor analysis, documented all spokespeople, created key stories to pitch, and even began outreach, yielding a number of valuable placements.
+Decred in Depth released two episodes in February, [Decred, an Economic Breakthrough](https://decredindepth.libsyn.com/ammar-nasier-decred-an-economic-breakthrough) with @ammarooni and [DCR in LATAM](https://decredindepth.libsyn.com/elian-huesca-dcr-in-latam) with @elian. Additionally, @mr.black worked with @Checkmate and @permabullnino to release a new, trading-focused podcast titled [Rough Consensus](https://roughconsensus.libsyn.com/rough-consensus-1-rough-start).
 
-Decred in Depth released two episodes in February. The first featured Ammar Naseer, titled [Decred, an economic breakthrough](https://decredindepth.libsyn.com/ammar-nasier-decred-an-economic-breakthrough), and the second featuring Elian Huesca was titled, [DCR in LATAM](https://decredindepth.libsyn.com/elian-huesca-dcr-in-latam). Additionally, @Mr. Black worked with @checkmatey_ and @permabullnino_ to release a new, trading-focused podcast titled "[Rough Consensus](https://podcasts.google.com/?feed=aHR0cDovL2RlY3JlZGluZGVwdGgubGlic3luLmNvbS9yc3M&episode=OWQ1MmU3ZWMtMjUzYy00MzU0LThlYzktZmUyYjU5MzI2YjUx&hl=en&ved=2ahUKEwiVouvaoIHoAhXNK80KHZFiC0sQieUEegQICxAE&ep=6)."
+DCR Comic launched the [dcrcomic.org](https://dcrcomic.org/) website hosting all work produced by the team, of which the latest comic is explains [Lightning Network](https://twitter.com/DCRComic/status/1229792848188444672).
 
-On February 18th, DCR Comic released a comic featuring [The Lightning Network](https://twitter.com/DCRComic/status/1229792848188444672?s=20). All of their work can be viewed on their [website](https://dcrcomic.org/).
+@Checkmate published an extremely interesting piece about the [ProgPoW debate](https://medium.com/@_Checkmatey_/observing-ethereum-governance-during-the-progpow-debate-9bf1aec724ad) in Ethereum describing the shortcomings of Ethereum's governance system and how Decred's tools and methodologies can be employed to solve them. It is an excellent example of inserting Decred's points of differentiation into wider conversations, and was well-received by many in the Ethereum community, including [David Hoffman](https://twitter.com/TrustlessState/status/1234653059424358400), co-host of the POV Crypto podcast.
 
-Checkmatey_ published an extremely interesting piece titled, [Observing Ethereum Governance during the ProgPoW Debate](https://medium.com/@_Checkmatey_/observing-ethereum-governance-during-the-progpow-debate-9bf1aec724ad). This article describes the shortcomings of Ethereum's governance system and how Decred's tools and methodologies can be employed to solve them. It is an excellent example of inserting Decred's points of differentiation into wider conversations, and was [well-received by many in the Ethereum community, including David Hoffman](https://twitter.com/TrustlessState/status/1234653059424358400?s=20), co-host of the POV Crypto podcast.
+Monde PR came on board and quickly [established](https://github.com/decredcommunity/pr/pull/7) project public relations goals, target audiences, key messages, established credibility bullet points, documented key topics, performed a [competitor analysis](https://github.com/decredcommunity/pr/pull/8), documented all spokespeople, created key stories to pitch, and even began outreach, yielding a number of valuable placements:
 
-Tweeted [thoughts](https://twitter.com/lefebvre_dustin/status/1225462426503696384) from @Dustorf
-
-https://twitter.com/DCRComic/status/1226224719604613120?s=20
-
-February PR achievements below.
-
-Completed PR prep:
-
-- PR Materials document
-- Competitor Analytics
-- Target media lists
-- PR Calendar
- 
-News articles:
-
-- An [article](https://cointelegraph.com/news/the-state-of-blockchain-experts-weigh-in-on-adoption-around-the-world) in Cointelegraph featuring @elian and @akin’s commentary on the adoption of blockchain around the world
-- An [article](https://www.financemagnates.com/cryptocurrency/news/does-china-control-bitcoin-and-ethereum/) in Finance Magnates featuring @jy-p’s commentary on the centralization of Bitcion mining and consensus models
-- An [article](https://eng.ambcrypto.com/bitcoin-building-a-nation-on-the-foundation-of-maximalism/) in AMB Crypto featuring commentary from @richardred on Bitcion building a nation
+- An [article](https://cointelegraph.com/news/the-state-of-blockchain-experts-weigh-in-on-adoption-around-the-world) in Cointelegraph featuring @elian and @akin's commentary on the adoption of blockchain around the world.
+- An [article](https://www.financemagnates.com/cryptocurrency/news/does-china-control-bitcoin-and-ethereum/) in Finance Magnates featuring @jy-p's commentary on the centralization of Bitcion mining and consensus models.
+- An [article](https://eng.ambcrypto.com/bitcoin-building-a-nation-on-the-foundation-of-maximalism/) in AMB Crypto featuring commentary from @richardred on Bitcion building a nation.
 
 ## Events
 
